# Pok-dex

./: README.md  check_item_page.py  check_pokemon_data.py  check_wiki.py  database.py  debug_db.py  debug_special_cases.py  main.py  pokedex.json  pokemon.db  pokemon_db_init.py  pokemon_items.json  pyproject.toml  recreate_db.py  test_image_paths.py
backend/spider/: check_spritenum.py  spider_all.py  spider_descrption.py  spider_evolution.py  spider_item.py  spider_item_images.py  spider_moves.py  spider_png.py  spider_pokemon_moves.py
db/: check_db.py  database.py  insert_data.py  pokemon.db  pokemon_db_init.py  update_png_images.py
frontend/: README.md  check_filenames.py  check_images.py  debug_image_path.py  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  router.js
pokemon_data_all/: 1_bulbasaur.json
spider/: spider_all.py  spider_descrption.py  test.py  test_all_fix.py  test_bulbapedia.py  test_bulbasaur.py  test_js_data.py  test_re_crawl.py  test_save.py  test_venusaur.py
spider/pokemon_data_all/: 0_missingno.json  1000_gholdengo.json  1002_chienpao.json  1004_chiyu.json  1006_ironvaliant.json  1008_miraidon.json  1009_walkingwake.json  100_voltorb.json  1011_dipplin.json  1012_poltchageistartisan.json  1013_sinistcha.json  (+747 more)
testtest/: check_api_gender_ratio.py  check_bulbasaur_gender_ratio.py  check_db_gender_ratio.py  check_pikachu_gender_ratio.py  check_pokemon_variants.py  check_variant_pokemon.py  gender_ratio_test.html  test_gender_ratio.py  test_insert_pokemon.py  test_pikachu_insert.py  verify_gender_ratio.py
(+8715 files in other folders)
