[project]
name = "my-pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.121.3",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.2",
]
